// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proto basic 1`] = `
"## Begin

- [bullet link](dendron.so)
- one
- two
- three
"
`;

exports[`proto basic2 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "line one",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 2,
          "offset": 12,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 9,
        },
      },
      "type": "thematicBreak",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 9,
              "line": 3,
              "offset": 21,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 13,
            },
          },
          "type": "text",
          "value": "line two",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 9,
          "line": 3,
          "offset": 21,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 9,
      "line": 3,
      "offset": 21,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`proto wiilinks as list 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "checked": null,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "data": Object {
                    "alias": "one",
                    "anchorHeader": undefined,
                    "vaultName": undefined,
                  },
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 3,
                      "line": 1,
                      "offset": 2,
                    },
                  },
                  "type": "wikiLink",
                  "value": "one",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "indent": Array [],
                "start": Object {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        Object {
          "checked": null,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "data": Object {
                    "alias": "two",
                    "anchorHeader": undefined,
                    "vaultName": undefined,
                  },
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 2,
                      "offset": 19,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 3,
                      "line": 2,
                      "offset": 12,
                    },
                  },
                  "type": "wikiLink",
                  "value": "two",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 2,
                  "offset": 19,
                },
                "indent": Array [],
                "start": Object {
                  "column": 3,
                  "line": 2,
                  "offset": 12,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 10,
              "line": 2,
              "offset": 19,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 10,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": Position {
        "end": Object {
          "column": 10,
          "line": 2,
          "offset": 19,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 2,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
